--- a/src/components/SinglePainting/SinglePainting.css
+++ b/src/components/SinglePainting/SinglePainting.css
@@ -21,6 +21,7 @@
 .painting-in-single {
   box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
   height: 40vh;
+  max-width: 50vw;
 }
 
 .painting-description {
