--- a/src/components/SinglePainting/SinglePainting.css
+++ b/src/components/SinglePainting/SinglePainting.css
@@ -15,7 +15,7 @@
 .single-painting-img-box {
   display: flex;
   justify-content: center;
-  width: 50vw;
+  margin-right: 5%;
 }
 
 .painting-in-single {
@@ -41,7 +41,7 @@
   height: 35vh;
   justify-content: center;
   overflow: scroll;
-  width: 42vw;
+  width: 38vw;
 }
 
 .single-painting-title {
