Add local storage

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,13 @@
 .searches {
-  align-items: center;
   display: flex;
   height: 7vh;
   justify-content: center;
   margin-bottom: 3%;
+}
+
+.search {
+  height: 5hv;
+  margin: 3px;
 }
 
 .loading-container {
